docs/2.0/FAQ.md
# Frequently Asked Questions

&nbsp;

**What platforms does SparkleStore support?**

SparkleStore supports Windows, MacOS, Linux, Nintendo Switch, Sony PlayStation 4/5, Xbox Series X/S, iOS, tvOS, and Android. Other platforms will very likely work fine too but they aren't officially supported.

&nbsp;

**What versions of GameMaker does SparkleStore support?**

SparkleStore supports GameMaker 2024.14, and in theory supports every version of GameMaker later than that. Later versions of GameMaker may change functionality in a way that SparkleStore is not forwards-compatible with, but SparkleStore uses only native GameMaker functions so is in the best possible position for long-term compatibility.

&nbsp;

**How is SparkleStore licensed? Can I use it for commercial projects?**

[SparkleStore is released under the MIT license](https://github.com/JujuAdams/SparkleStore/blob/master/LICENSE). This means you can use it for whatever purpose you want, including commercial projects. It'd mean a lot to me if you'd drop my name in the credits (Juju Adams) and/or say thanks, but you're under no obligation to do so.

&nbsp;

**How do I update SparkleStore?**

Releases go out once in while, typically expedited if there is a serious bug. This library uses [semantic versioning](https://semver.org/). In short, if the left-most number in the version is increased then this is a "major version increase". Major version increases introduce breaking changes and you'll almost certainly have to rewrite some code. However, if the middle or right-most number in the version is increased then you probably won't have to rewrite any code. For example, moving from `1.1.0` to `2.0.0` is a major version increase but moving from `1.1.0` to `1.2.0` isn't.

?> Please always read patch notes. Very occasionally a minor breaking change in an obscure feature may be introduced by a minor version increase.

At any rate, the process to update is as follows:

1. **Back up your whole project using source control!**
2. Back up the contents of your configuration script (`__SparkleConfig`) within your project. Duplicating scripts is sufficient
3. Delete all library scripts from your project. Unless you've moved things around, this means deleting the library folder from the asset browser
4. Import the latest [.yymps](https://github.com/JujuAdams/SparkleStore/releases/)
5. Restore your configuration scripts from the back-up line by line

!> Because configuration macros might be added or removed between versions, it's important to restore your configuration scripts carefully.

&nbsp;

**I think you're missing a useful feature and I'd like you to implement it!**

Great! Please make a [feature request](https://github.com/JujuAdams/SparkleStore/issues). Feature requests make SparkleStore a more fun tool to use and gives me something to think about when I'm bored on public transport.

&nbsp;

**I found a bug, and it both scares and mildly annoys me. What is the best way to get the problem solved?**

Please make a [bug report](https://github.com/JujuAdams/SparkleStore/issues). I check GitHub every day and bug fixes usually go out a couple days after that.

&nbsp;

**Who made SparkleStore?**

SparkleStore is built and maintained by [Juju](https://www.jujuadams.com/) who has been writing save systems for GameMaker games for a decade. I've worked on a lot of [commercial GameMaker games](http://www.jujuadams.com/) over the years. SparkleStore is the product of practical experience working as a consultant.

&nbsp;

**Has AI been used to make this library?**

This library was made with human hands. No generative AI models have been used to make this library.

&nbsp;

**Can I send you donations? Are you going to start a Patreon?**

Thank you for wanting to show your appreciation - it really does mean a lot to me personally - but I'm fortunate enough to have a stable income from gamedev. I'm not looking to join Patreon as a creator at this moment in time. If you'd like to support my work then drop a credit in your game and/or give a shout-out on the social media platform of your choice.

&nbsp; 

**How do I credit you in my game?**

You may credit me as "Juju Adams" or "JUJU ADAMS", whichever is most appropriate for your game, in any Latin font. My MobyGames account is [here](https://www.mobygames.com/person/918360/). You may **not** use my social media avatar (from Discord or other social media) for any purpose and you should only use my name for a credit.
